--- a/css/style.css
+++ b/css/style.css
@@ -554,5 +554,8 @@ footer {
 }
 
 /* .container {border: 1px solid red;} */
-/* * {border: 1px solid red;} */
+* {
+	border: 1px solid red;
+}
+
 /* .container { border: 1px solid red;} */
