--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,6 @@
 	max-width: 1920px;
 	margin: 0 auto;
 	padding: 0;
-	overflow-x: hidden;
-	scroll-snap-type: y mandatory;
-	scroll-padding-top: 20px;
-
 }
 
 section {
@@ -557,7 +553,7 @@ footer {
 
 /* .container {border: 1px solid red;} */
 * {
-	border: 1px solid red !important;
+	border: 1px solid red;
 }
 
 /* .container { border: 1px solid red;} */
