--- a/css/style.css
+++ b/css/style.css
@@ -497,13 +497,13 @@ footer {
 	}
 }
 
-.offcanvas-body {
+.offcanvas {
 	.btn-close:focus {
 		box-shadow: none !important;
 	}
 
 	img {
-		max-width: 100px;
+		max-width: 100px !important;
 	}
 
 	li a {
