--- a/css/media.css
+++ b/css/media.css
@@ -1,11 +1,14 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+	* {
+		font: normal 15px/22px MontserratMedium, 'Sans-serif';
+	}
 	.title {
 		font: Bold 36px/42px MontserratBold, 'Sans-serif' !important;
 	}
 
 	.sub-title {
-		font: Bold 30px/38px MontserratBold, 'Sans-serif' !important;
+		font: normal 30px/38px MontserratBold, 'Sans-serif' !important;
 	}
 
 	#bannerArea {
@@ -39,7 +42,7 @@
 
 	#calltoactionArea {
 		.container {
-			min-height: 500px;
+			min-height: 600px;
 		}
 	}
 
@@ -60,6 +63,16 @@
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
+	* {
+		font: normal 16px/24px MontserratMedium, 'Sans-serif';
+	}
+	.title {
+		font: Bold 42px/48px MontserratBold, 'Sans-serif' !important;
+	}
+
+	.sub-title {
+		font: normal 36px/42px MontserratBold, 'Sans-serif' !important;
+	}
 	#bannerArea {
 		.item {
 			height: 520px;
