--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,11 @@
 	/* border: 1px saddlebrown solid !important; */
 }
 
+body,
+.hideOverflowOnMobile {
+	overflow-x: hidden;
+}
+
 #mainContainer {
 	max-width: 1920px;
 	margin: 0 auto;
@@ -56,6 +61,12 @@ input,
 textarea,
 select {
 	width: 100%;
+	border-color: #ddd !important;
+	transition: 300ms ease-in;
+
+	&:focus {
+		border-color: #0f2962 !important;
+	}
 }
 
 .btn.btn-primary {
@@ -263,7 +274,7 @@ header {
 		columns: 3;
 
 		li {
-			min-height: 70px;
+			min-height: 80px;
 			break-inside: avoid-column;
 			margin-bottom: 16px;
 			display: flex;
@@ -342,8 +353,8 @@ header {
 		.button-hover {
 			position: absolute;
 			inset: auto 0 0 auto;
-			border: 1px solid #0c336a;
-			background-color: #0c336a;
+			border: 1px solid #11225a;
+			background-color: #11225a;
 			width: 50px;
 			height: 50px;
 			border-top-left-radius: 75%;
@@ -410,11 +421,11 @@ header {
 }
 
 footer {
-	background-color: #003366;
+	background-color: #11225a;
 
 	.contactBox {
 		.innerBox {
-			background-color: #11225a !important;
+			background-color: #003366 !important;
 		}
 
 		span {
@@ -515,13 +526,13 @@ footer {
 
 		&:hover:not(.active) {
 			padding: 8px 20px;
-			border-left: 2px solid #ddd;
+			border-left: 2px solid #0f2962;
 			color: #0f2962 !important;
 		}
 
 		&.active {
 			padding: 8px 20px;
-			border-left: 2px solid #ddd;
+			border-left: 2px solid #0c336a;
 			color: #0c336a !important;
 		}
 	}
@@ -552,8 +563,5 @@ footer {
 }
 
 
-/* * {
-	border: 1px solid red;
-} */
-
-/* .container { border: 1px solid red;} */
+/* * {border: 1px solid red !important;}
+.container { border: 1px solid red !important;} */
