--- a/css/media.css
+++ b/css/media.css
@@ -3,12 +3,18 @@
 	* {
 		font: normal 15px/22px MontserratMedium, 'Sans-serif';
 	}
+
 	.title {
 		font: Bold 36px/42px MontserratBold, 'Sans-serif' !important;
 	}
 
 	.sub-title {
-		font: normal 30px/38px MontserratBold, 'Sans-serif' !important;
+		font: normal 30px/38px MontserratRegular, 'Sans-serif' !important;
+	}
+
+	.offcanvas img,
+	.navbar-brand img {
+		max-height: 65px;
 	}
 
 	#bannerArea {
@@ -36,7 +42,9 @@
 
 	#amenitiesArea {
 		.boxData {
-			columns: 1;
+			ul {
+				columns: 1;
+			}
 		}
 	}
 
@@ -66,13 +74,15 @@
 	* {
 		font: normal 16px/24px MontserratMedium, 'Sans-serif';
 	}
+
 	.title {
 		font: Bold 42px/48px MontserratBold, 'Sans-serif' !important;
 	}
 
 	.sub-title {
-		font: normal 36px/42px MontserratBold, 'Sans-serif' !important;
+		font: normal 36px/42px MontserratRegular, 'Sans-serif' !important;
 	}
+
 	#bannerArea {
 		.item {
 			height: 520px;
@@ -101,7 +111,9 @@
 
 	#amenitiesArea {
 		.boxData {
-			columns: 2;
+			ul {
+				columns: 2;
+			}
 		}
 	}
 
@@ -163,7 +175,9 @@
 
 	#amenitiesArea {
 		.boxData {
-			columns: 3;
+			ul {
+				columns: 3;
+			}
 		}
 	}
 
@@ -196,7 +210,7 @@
 @media only screen and (min-width: 1200px) {
 	#bannerArea {
 		.item {
-			height: 600px;
+			height: calc(100dvh - 155px);
 		}
 
 		.text {
@@ -206,20 +220,10 @@
 
 	#calltoactionArea {
 		.container {
-			min-height: 720px !important;
+			min-height: calc(100dvh - 155px) !important;
 		}
 	}
 }
 
 /* Extra large devices (large desktops, 1400px and up) */
-@media only screen and (min-width: 1400px) {
-	#bannerArea {
-		.item {
-			height: 780px;
-		}
-
-		.text {
-			max-width: 650px;
-		}
-	}
-}
+@media only screen and (min-width: 1400px) {}
