--- a/css/media.css
+++ b/css/media.css
@@ -9,7 +9,7 @@
 	}
 
 	.sub-title {
-		font: normal 30px/38px MontserratRegular, 'Sans-serif' !important;
+		font: normal 30px/38px MontserratRegularmin-, 'Sans-serif' !important;
 	}
 
 	.offcanvas img,
@@ -57,8 +57,8 @@
 	footer {
 		.contactBox {
 			span {
-				width: 50px;
-				height: 50px;
+				min-width: 50px;
+				min-height: 50px;
 				place-items: center;
 
 				i {
@@ -130,8 +130,8 @@
 
 		.contactBox {
 			span {
-				width: 45px;
-				height: 45px;
+				min-width: 45px;
+				min-height: 45px;
 				place-items: center;
 
 				i {
@@ -194,8 +194,8 @@
 
 		.contactBox {
 			span {
-				width: 75px;
-				height: 75px;
+				min-width: 75px;
+				min-height: 75px;
 				place-items: center;
 
 				i {
