--- a/css/style.css
+++ b/css/style.css
@@ -407,11 +407,89 @@ header {
 	}
 }
 
+#reviewArea {
+	.item {
+		margin-left: 1px;
+		background-color: #003366;
+		background: linear-gradient(180, rgba(25, 0, 60, 1) 0%, rgba(5, 81, 133, 1) 100%);
+		position: relative;
+		&::after {
+			content: " ";
+			position: absolute;
+			inset: 0;
+			width: 100%;
+			height: 100%;
+			opacity: .5;
+			transform: scaleX(-1);
+			background: url('../images/quote.png') no-repeat 300px 150px / 100px !important;
+		}
+		&::before {
+			content: " ";
+			position: absolute;
+			inset: 0;
+			width: 100%;
+			height: 100%;
+			opacity: .5;
+			transform: scaleY(-1);
+			background: url('../images/quote.png') no-repeat 300px 0 / 100px !important;
+}
+		img {
+			max-width: 120px;
+			border-radius: 50%;
+			aspect-ratio: 1/1;
+		}
+		i {
+			color: #ddd !important;
+			&.active {
+				color: gold !important;
+			}
+		}
+		&:hover {
+			box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.25) !important;
+		}
+	}
+}
+
+#storyArea {
+	background: #fff url('../images/construction.jpg') no-repeat center center / cover;
+	.card {
+		h3 {
+			color: #003366 !important;
+			font-family: MontserratMedium, 'Sans-serif';
+			text-transform: capitalize;
+		}
+		a {
+			transition: 300ms ease;
+			&:hover {
+				color: #003366 !important;
+			}
+		}
+	}
+}
+
 #contactArea {
 	iframe {
 		width: 100%;
 		min-height: 450px;
 		border-radius: 10px;
+	}
+
+	.owl-text {
+		p {
+			color: #003366 !important;
+			cursor: pointer;
+
+			span {
+				background-color: #003366;
+				width: 35px;
+				height: 35px;
+				place-items: center;
+
+				i {
+					color: #fff !important;
+				}
+			}
+		}
 	}
 }
 
